updated to epsilon_selection

--- a/pools_specific_EDA/Upper Pool 4/alaina_kmapper.ipynb
+++ b/pools_specific_EDA/Upper Pool 4/alaina_kmapper.ipynb
@@ -58,39 +58,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# STUFF TO ADD\n",
-    "\"\"\"\n",
-    "\n",
-    "def get_color_val(index,df,scomplex,variable):\n",
-    "\n",
-    "    relevant_nodes = getNodesfromIndex(scomplex,index)\n",
-    "    \n",
-    "    #print(relevant_nodes)\n",
-    "    \n",
-    "    relevant_df = getSubdf(scomplex,relevant_nodes,df)\n",
-    "    \n",
-    "    colorval = relevant_df[variable].mean()\n",
-    "    \n",
-    "    return colorval\n",
-    "\n",
-    "\n",
-    "\n",
-    "   else:\n",
-    "        #color_values = X[color_variable]\n",
-    "            # Change color values of that point to be the average tn value of all other points in the same node or nodes\n",
-    "        color_values = []\n",
-    "        for index,row in X.iterrows():\n",
-    "            color_values.append(get_color_val(index,X,scomplex,color_variable))\n",
-    "\n",
-    "\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "## Upload data"
@@ -144,12 +111,20 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "for index, row in water_df.iterrows():\n",
-    "    water_df['93-00'] = np.where((water_df['YEAR'] <= 2000), 1, 0)\n",
-    "    water_df['98-04'] = np.where((water_df['YEAR' >= 1998]) & (water_df['YEAR'] <= 2004), 1, 0)\n",
-    "    water_df['01-13'] = np.where((water_df['YEAR'] >= 2001) & (water_df['YEAR'] <= 2013), 1, 0)\n",
-    "    water_df['10-16'] = np.where((water_df['YEAR'] >= 2010) & (water_df['YEAR'] <= 2016), 1, 0)\n",
-    "    water_df['14-20'] = np.where((water_df['YEAR'] >= 2014), 1, 0)"
+    "#for index, row in water_df.iterrows():\n",
+    "#    water_df['93-00'] = np.where((water_df['YEAR'] <= 2000), 1, 0)\n",
+    "#    water_df['98-04'] = np.where((water_df['YEAR' >= 1998]) & (water_df['YEAR'] <= 2004), 1, 0)\n",
+    "#    water_df['01-13'] = np.where((water_df['YEAR'] >= 2001) & (water_df['YEAR'] <= 2013), 1, 0)\n",
+    "#    water_df['10-16'] = np.where((water_df['YEAR'] >= 2010) & (water_df['YEAR'] <= 2016), 1, 0)\n",
+    "#    water_df['14-20'] = np.where((water_df['YEAR'] >= 2014), 1, 0)\n",
+    "\n",
+    "eco_time_periods = ['1993-2000', '1898-2004', '2001-2013', '2010-2016', '2014-2020']\n",
+    "\n",
+    "for time_period in eco_time_periods:\n",
+    "    begin_year = int(time_period[0:4])\n",
+    "    end_year = int(time_period[5:9])\n",
+    "    \n",
+    "    water_df[time_period] = np.where((water_df['YEAR'] >= begin_year) & (water_df['YEAR'] <= end_year), 1, 0)"
    ],
    "outputs": [],
    "metadata": {}
