--- a/TDA_Analysis_Scripts/parameter selection/parameter evaluation.ipynb
+++ b/TDA_Analysis_Scripts/parameter selection/parameter evaluation.ipynb
@@ -1155,20 +1155,20 @@
     "* n_cubes = [125, 125]\n",
     "* perc_overlap = [0.4, 0.4],\n",
     "\n",
-    "The reasos for the last two parameter section are (1) each node represents at most 10% of the data, and (2) less than 10% of the data is lost as noise. The graph layout is one large connected component. \n",
+    "The reasons for the last two parameter section are (1) each node represents at most 10% of the data, and (2) less than 10% of the data is lost as noise. The graph layout is one large connected component. \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "14aef0cb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e62040054083498990c88f73c9f1f9d0",
+       "model_id": "ca495b283a7a4d149f72a4196b2e5f89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1184,7 +1184,9 @@
    ],
    "source": [
     "plotlyviz(db_scomplex[44], title = db_params[44], \n",
-    "          graph_layout='fr', dashboard = True)\n",
+    "          graph_layout='fr', dashboard = True,     \n",
+    "          width=800,\n",
+    "          height=800)\n",
     "# CHOSEN ONE"
    ]
   },
