new pool4 tda and changed indexing in kmapper func

--- a/pools_specific_EDA/Upper Pool 4/tda.ipynb
+++ b/pools_specific_EDA/Upper Pool 4/tda.ipynb
@@ -181,21 +181,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "source": [
     "continuous_variables = [\"WDP\",\"SECCHI\",\"TEMP\", \"DO\", \"TURB\", \"VEL\", \"TP\", \"TN\", \"SS\", \"CHLcal\"]\n",
-    "X = water_df[continuous_variables]\n",
+    "X = water_df#[continuous_variables]\n",
     "\n",
     "var_to_index = {continuous_variables[i] : i for i in range(len(continuous_variables))}\n",
     "projected_var_indices = [var_to_index[var] for var in continuous_variables]\n",
     "\n",
+    "X.reset_index(drop = True, inplace = True)\n",
+    "\n",
     "cluster_alg = sklearn.cluster.DBSCAN(eps = 1.2, min_samples = 20, metric = 'euclidean')\n",
     "#cluster_alg = hdbscan.HDBSCAN(min_cluster_size = 10, min_samples = 10)\n",
     "pca = PCA(n_components = 2)\n",
-    "lens = pca.fit_transform(X)\n",
+    "lens = pca.fit_transform(X[continuous_variables])\n",
     "\n",
     "mapper = km.KeplerMapper(verbose = 0)\n",
-    "scomplex = mapper.map(lens, X, cover = km.Cover(n_cubes = [125, 125], perc_overlap = [.4, .4]), \n",
+    "scomplex = mapper.map(lens, X[continuous_variables], cover = km.Cover(n_cubes = [125, 125], perc_overlap = [.4, .4]), \n",
     "                                            clusterer = cluster_alg, remove_duplicate_nodes = True)\n"
    ],
    "outputs": [],
@@ -401,17 +403,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "source": [
     "#scomplex = scomplex_dict.get(key)\n",
     "scomplex['density'] = {}\n",
     "largestShape = clean_getShapes(scomplex)[0]\n",
     "#print(\"Largest shape is: \", largestShape, \"\\n\")\n",
-    "largestShape_df = getSubdf(scomplex, largestShape, X)\n",
+    "largestShape_df = getSubdf(scomplex, largestShape, X[continuous_variables])\n",
     "k = int((X.shape[0] / 10) + 1)\n",
     "for node_name in largestShape:\n",
     "    #scomplex['density'][node_name] = calculate_density(scomplex, node_name, largestShape_df, k)\n",
-    "    scomplex['density'][node_name] = calculate_density(scomplex, node_name, X, k)"
+    "    scomplex['density'][node_name] = calculate_density(scomplex, node_name, X[continuous_variables], k)"
    ],
    "outputs": [],
    "metadata": {}
@@ -546,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "source": [
     "#for key in allComplices: # remove the indices here to get all the strata for all the time periods\n",
     "#scomplex = scomplex_dict.get(key)\n",
@@ -571,7 +573,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "source": [
-    "filepath = \"all_data.png\"\n",
+    "filepath = \"all_data1.png\"\n",
     "draw_graph(scomplex, filepath, with_labels = False)"
    ],
    "outputs": [
