--- a/TDA_Analysis_Scripts/State Coloring.ipynb
+++ b/TDA_Analysis_Scripts/State Coloring.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "driven-gibraltar",
+   "execution_count": 26,
+   "id": "small-unemployment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "requested-programming",
+   "execution_count": 27,
+   "id": "quarterly-welsh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,8 +348,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "living-interaction",
+   "execution_count": 39,
+   "id": "exceptional-baker",
    "metadata": {
     "scrolled": true
    },
@@ -507,7 +507,9 @@
     "df.reset_index(drop = True, inplace = True)\n",
     "k = int(round(df.shape[0] / 10,0))\n",
     "\n",
+    "# Parameters for entire dataset\n",
     "scomplex = generate_scomplex(df, epsilon = 1, min_samples = 20,n_cubes=[55,17],perc_overlap=0.4)\n",
+    "\n",
     "scomplex['density'] = {}\n",
     "largestShape = clean_getShapes(scomplex)[0]\n",
     "print(\"Number of Nodes in Largest Shape: \", len(largestShape))\n",
@@ -521,8 +523,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "wrong-heart",
+   "execution_count": 41,
+   "id": "digital-statistics",
    "metadata": {},
    "outputs": [
     {
@@ -553,8 +555,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "accepted-queensland",
+   "execution_count": 42,
+   "id": "worse-contract",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "filepath = r\"C:\\Users\\cashe\\OneDrive\\Documents\\GitHub\\UMR-TDA-2021\\pools_specific_EDA\\Open River\\Mapper outputs\\Open River DDF\\scomplex.p\"\n",
+    "pickle.dump(scomplex,open(filepath,'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "intensive-collective",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "prescribed-platform",
+   "id": "accompanied-selection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "reported-walter",
+   "id": "falling-cincinnati",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "assumed-penny",
+   "id": "healthy-mounting",
    "metadata": {},
    "outputs": [],
    "source": []
