boxplots for poster

--- a/pools_specific_EDA/Upper Pool 4/alaina_kmapper.ipynb
+++ b/pools_specific_EDA/Upper Pool 4/alaina_kmapper.ipynb
@@ -175,7 +175,7 @@
     "ax.set_ylim(-5, 20)\n",
     "ax.get_yaxis().set_visible(False)\n",
     "\n",
-    "#ax.set_yticklables([-5, 0, 5, 10, 15, 20])\n",
+    "ax.set_yticklables([-5, 0, 5, 10, 15, 20])\n",
     "\n",
     "plt.title(\"Distribution of standardized variables\")\n",
     " \n",
