--- a/TDA_Analysis_Scripts/State Coloring.ipynb
+++ b/TDA_Analysis_Scripts/State Coloring.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "small-unemployment",
+   "id": "advance-illustration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "quarterly-welsh",
+   "id": "alien-civilian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,8 +348,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "exceptional-baker",
+   "execution_count": 47,
+   "id": "rural-deputy",
    "metadata": {
     "scrolled": true
    },
@@ -358,8 +358,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(12446, 20)\n",
-      "Number of Nodes in Largest Shape:  133\n",
+      "(76698, 20)\n",
+      "Number of Nodes in Largest Shape:  254\n",
       "1\n",
       "2\n",
       "3\n",
@@ -492,7 +492,128 @@
       "130\n",
       "131\n",
       "132\n",
-      "133\n"
+      "133\n",
+      "134\n",
+      "135\n",
+      "136\n",
+      "137\n",
+      "138\n",
+      "139\n",
+      "140\n",
+      "141\n",
+      "142\n",
+      "143\n",
+      "144\n",
+      "145\n",
+      "146\n",
+      "147\n",
+      "148\n",
+      "149\n",
+      "150\n",
+      "151\n",
+      "152\n",
+      "153\n",
+      "154\n",
+      "155\n",
+      "156\n",
+      "157\n",
+      "158\n",
+      "159\n",
+      "160\n",
+      "161\n",
+      "162\n",
+      "163\n",
+      "164\n",
+      "165\n",
+      "166\n",
+      "167\n",
+      "168\n",
+      "169\n",
+      "170\n",
+      "171\n",
+      "172\n",
+      "173\n",
+      "174\n",
+      "175\n",
+      "176\n",
+      "177\n",
+      "178\n",
+      "179\n",
+      "180\n",
+      "181\n",
+      "182\n",
+      "183\n",
+      "184\n",
+      "185\n",
+      "186\n",
+      "187\n",
+      "188\n",
+      "189\n",
+      "190\n",
+      "191\n",
+      "192\n",
+      "193\n",
+      "194\n",
+      "195\n",
+      "196\n",
+      "197\n",
+      "198\n",
+      "199\n",
+      "200\n",
+      "201\n",
+      "202\n",
+      "203\n",
+      "204\n",
+      "205\n",
+      "206\n",
+      "207\n",
+      "208\n",
+      "209\n",
+      "210\n",
+      "211\n",
+      "212\n",
+      "213\n",
+      "214\n",
+      "215\n",
+      "216\n",
+      "217\n",
+      "218\n",
+      "219\n",
+      "220\n",
+      "221\n",
+      "222\n",
+      "223\n",
+      "224\n",
+      "225\n",
+      "226\n",
+      "227\n",
+      "228\n",
+      "229\n",
+      "230\n",
+      "231\n",
+      "232\n",
+      "233\n",
+      "234\n",
+      "235\n",
+      "236\n",
+      "237\n",
+      "238\n",
+      "239\n",
+      "240\n",
+      "241\n",
+      "242\n",
+      "243\n",
+      "244\n",
+      "245\n",
+      "246\n",
+      "247\n",
+      "248\n",
+      "249\n",
+      "250\n",
+      "251\n",
+      "252\n",
+      "253\n",
+      "254\n"
      ]
     }
    ],
@@ -501,30 +622,30 @@
     "\n",
     "continuous_variables = [\"WDP\", \"SECCHI\", \"TEMP\", \"DO\", \"TURB\", \"VEL\", \"TP\", \"TN\", \"SS\", \"CHLcal\"]\n",
     "df.dropna(axis=0, how='any', thresh=None, subset=continuous_variables, inplace=True)\n",
-    "df = df[df['FLDNUM']=='Jackson, MO']\n",
+    "#df = df[df['FLDNUM']=='Jackson, MO']\n",
     "print(df.shape)\n",
     "df = df[continuous_variables]\n",
     "df.reset_index(drop = True, inplace = True)\n",
     "k = int(round(df.shape[0] / 10,0))\n",
     "\n",
     "# Parameters for entire dataset\n",
-    "scomplex = generate_scomplex(df, epsilon = 1, min_samples = 20,n_cubes=[55,17],perc_overlap=0.4)\n",
+    "scomplex = generate_scomplex(df, epsilon = 1.2, min_samples = 20,n_cubes=[125,125],perc_overlap=0.4)\n",
     "\n",
     "scomplex['density'] = {}\n",
     "largestShape = clean_getShapes(scomplex)[0]\n",
     "print(\"Number of Nodes in Largest Shape: \", len(largestShape))\n",
     "i = 1\n",
-    "X = pd.DataFrame(RobustScaler().fit_transform(df))\n",
+    "X_scaled = pd.DataFrame(RobustScaler().fit_transform(df))\n",
     "for node in largestShape:\n",
     "    print(i)\n",
     "    i += 1\n",
-    "    scomplex['density'][node] = calculate_density(scomplex, node, X, k)"
+    "    scomplex['density'][node] = calculate_density(scomplex, node, X_scaled, k)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "digital-statistics",
+   "id": "valuable-disclaimer",
    "metadata": {},
    "outputs": [
     {
@@ -549,26 +670,40 @@
     "scomplex['graph'] = generate_graph(scomplex, largestShape)\n",
     "scomplex['maxima'] = get_local_maxima(scomplex['graph'])\n",
     "print(\"Number of Maxima: \", len(scomplex['maxima']))\n",
-    "filepath =  r\"C:\\Users\\cashe\\OneDrive\\Documents\\GitHub\\UMR-TDA-2021\\pools_specific_EDA\\Open River\\Mapper outputs\\Open River DDF\\Directedgraph_states.png\"\n",
+    "filepath =  r\"C:\\Users\\cashe\\OneDrive\\Documents\\GitHub\\UMR-TDA-2021\\pools_specific_EDA\\Open River\\Mapper outputs\\Entire Data DDF\\Directedgraph_states.png\"\n",
     "draw_graph(scomplex, filepath, with_labels=False)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "talented-association",
+   "metadata": {},
+   "source": [
+    "Save the picke and associated dataframe needed for subdf"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "worse-contract",
+   "execution_count": 45,
+   "id": "baking-demand",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "filepath = r\"C:\\Users\\cashe\\OneDrive\\Documents\\GitHub\\UMR-TDA-2021\\pools_specific_EDA\\Open River\\Mapper outputs\\Open River DDF\\scomplex.p\"\n",
-    "pickle.dump(scomplex,open(filepath,'wb'))"
+    "scomplex_filepath = r\"C:\\Users\\cashe\\OneDrive\\Documents\\GitHub\\UMR-TDA-2021\\pools_specific_EDA\\Open River\\Mapper outputs\\Entire Data DDF\\scomplex.p\"\n",
+    "X_filepath = r\"C:\\Users\\cashe\\OneDrive\\Documents\\GitHub\\UMR-TDA-2021\\pools_specific_EDA\\Open River\\Mapper outputs\\Entire Data DDF\\X.p\"\n",
+    "Xscaled_filepath = r\"C:\\Users\\cashe\\OneDrive\\Documents\\GitHub\\UMR-TDA-2021\\pools_specific_EDA\\Open River\\Mapper outputs\\Entire Data DDF\\X_scaled.p\"\n",
+    "\n",
+    "\n",
+    "pickle.dump(scomplex,open(filepath,'wb'))\n",
+    "pickle.dump(X_scaled,open(Xscaled_filepath,'wb'))\n",
+    "pickle.dump(df,open(X_filepath,'wb'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "intensive-collective",
+   "id": "chemical-glucose",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "accompanied-selection",
+   "id": "greatest-circular",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "falling-cincinnati",
+   "id": "owned-domain",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "healthy-mounting",
+   "id": "duplicate-turtle",
    "metadata": {},
    "outputs": [],
    "source": []
