update coloring organization

--- a/TDA LTRM Visualizations/visualize mapper for all variables.ipynb
+++ b/TDA LTRM Visualizations/visualize mapper for all variables.ipynb
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "ac848bda",
+   "id": "a365351f",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c05945a4",
+   "id": "af1a5fcc",
    "metadata": {},
    "source": [
     "\n",
@@ -2358,7 +2358,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "47e83b5a",
+   "id": "534bb4b4",
    "metadata": {},
    "outputs": [
     {
@@ -2729,32 +2729,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "ab43a9d1",
+   "execution_count": 74,
+   "id": "fcf4a334",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-70-d2c4aff20452>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcolor_idx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTemps_6\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# 5 levels in ecological time periods\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mcolor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmyTemps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcolor_idx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mlength\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myTemps = Temps_6.colors\n",
-    "myTemps = myTemps[0:5]\n",
+    "myTemps = myTemps[2:6]\n",
     "\n",
     "states_palette = []\n",
     "\n",
-    "interval = 1/(len(Temps_6.colors)-1)\n",
+    "interval = 1/(len(myTemps)-1)\n",
     "# print(interval)\n",
     "\n",
-    "for color_idx in range(len(Temps_6.colors)): # 5 levels in ecological time periods\n",
+    "for color_idx in range(len(myTemps)): # 5 levels in ecological time periods\n",
     "    color = myTemps[color_idx]\n",
     "    \n",
     "    length = len(str(color))\n",
@@ -2779,12 +2767,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "4df9f503",
+   "execution_count": 76,
+   "id": "25f8a66e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "state_plotly = save_plotly(state_km, state_summary, state_colors, [states_palette], ['STATE_color'], layt)"
+    "state_plotly = save_plotly(state_km, state_summary, state_colors, [palette], ['STATE_color'], layt)"
    ]
   }
  ],
