fix the pool 4 mapper outputs

--- a/TDA LTRM Visualizations/visualize mapper for all variables.ipynb
+++ b/TDA LTRM Visualizations/visualize mapper for all variables.ipynb
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 169,
    "id": "636d5d50",
    "metadata": {},
    "outputs": [
@@ -572,6 +572,8 @@
        "      <th>STRATUM</th>\n",
        "      <th>SHEETBAR</th>\n",
        "      <th>DATE</th>\n",
+       "      <th>LATITUDE</th>\n",
+       "      <th>LONGITUDE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -593,6 +595,8 @@
        "      <td>Main channel</td>\n",
        "      <td>41000065</td>\n",
        "      <td>07/26/1993</td>\n",
+       "      <td>-92.51097</td>\n",
+       "      <td>44.571864</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -612,6 +616,8 @@
        "      <td>Main channel</td>\n",
        "      <td>41000066</td>\n",
        "      <td>07/26/1993</td>\n",
+       "      <td>-92.518497</td>\n",
+       "      <td>44.575497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -631,6 +637,8 @@
        "      <td>Main channel</td>\n",
        "      <td>41000067</td>\n",
        "      <td>07/26/1993</td>\n",
+       "      <td>-92.523549</td>\n",
+       "      <td>44.573718</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -650,6 +658,8 @@
        "      <td>Main channel</td>\n",
        "      <td>41000068</td>\n",
        "      <td>07/26/1993</td>\n",
+       "      <td>-92.541238</td>\n",
+       "      <td>44.566588</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -669,6 +679,8 @@
        "      <td>Main channel</td>\n",
        "      <td>41000069</td>\n",
        "      <td>07/26/1993</td>\n",
+       "      <td>-92.54878</td>\n",
+       "      <td>44.568419</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -689,15 +701,15 @@
        "3  1.124317  0.173472 -0.332637  1993  Summer  Lake City, MN  Main channel   \n",
        "4  0.969262  0.482336 -0.291531  1993  Summer  Lake City, MN  Main channel   \n",
        "\n",
-       "   SHEETBAR        DATE  \n",
-       "0  41000065  07/26/1993  \n",
-       "1  41000066  07/26/1993  \n",
-       "2  41000067  07/26/1993  \n",
-       "3  41000068  07/26/1993  \n",
-       "4  41000069  07/26/1993  "
+       "   SHEETBAR        DATE   LATITUDE  LONGITUDE  \n",
+       "0  41000065  07/26/1993  -92.51097  44.571864  \n",
+       "1  41000066  07/26/1993 -92.518497  44.575497  \n",
+       "2  41000067  07/26/1993 -92.523549  44.573718  \n",
+       "3  41000068  07/26/1993 -92.541238  44.566588  \n",
+       "4  41000069  07/26/1993  -92.54878  44.568419  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,9 +717,15 @@
    "source": [
     "water20 = pd.read_csv(\"../LTRM data/RF interpolation/water_full.csv\")\n",
     "\n",
+    "water20['wrong_long'] = water20['LONGITUDE']\n",
+    "water20['LONGITUDE'] = water20['LATITUDE']\n",
+    "water20['LATITUDE'] = water20['wrong_long'] # coding error - switch lat and lng\n",
+    "\n",
+    "\n",
     "water_df = water20[[\"WDP\", \"SECCHI\", \"TEMP\", \"DO\", \"TURB\",\n",
-    "             \"VEL\", \"TP\", \"TN\", \"SS\", \"CHLcal\", \n",
-    "             \"YEAR\", \"SEASON\", \"FLDNUM\", \"STRATUM\", \"SHEETBAR\", \"DATE\"]]\n",
+    "                    \"VEL\", \"TP\", \"TN\", \"SS\", \"CHLcal\",\n",
+    "                    \"YEAR\", \"SEASON\", \"FLDNUM\", \"STRATUM\", \n",
+    "                    \"SHEETBAR\", \"DATE\", \"LATITUDE\", \"LONGITUDE\"]]\n",
     "\n",
     "ct = ColumnTransformer([\n",
     "        ('somename', RobustScaler(), [\"WDP\", \"SECCHI\", \"TEMP\", \"DO\", \"TURB\",\n",
@@ -715,8 +733,9 @@
     "    ], remainder='passthrough')\n",
     "\n",
     "water_df = pd.DataFrame(ct.fit_transform(water_df), columns = [\"WDP\", \"SECCHI\", \"TEMP\", \"DO\", \"TURB\",\n",
-    "                                                 \"VEL\", \"TP\", \"TN\", \"SS\", \"CHLcal\", \n",
-    "                                                 \"YEAR\", \"SEASON\", \"FLDNUM\", \"STRATUM\", \"SHEETBAR\", \"DATE\"])\n",
+    "                                                               \"VEL\", \"TP\", \"TN\", \"SS\", \"CHLcal\",\n",
+    "                                                               \"YEAR\", \"SEASON\", \"FLDNUM\", \"STRATUM\", \n",
+    "                                                               \"SHEETBAR\", \"DATE\", \"LATITUDE\", \"LONGITUDE\"])\n",
     "\n",
     "water_df = water_df.replace({'SEASON': {1: \"Spring\", 2: \"Summer\", 3: \"Fall\", 4: \"Winter\"}})\n",
     "\n",
@@ -2525,7 +2544,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8ec49310",
+   "id": "d8072d29",
    "metadata": {},
    "outputs": [
     {
@@ -2755,7 +2774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81bc9fff",
+   "id": "2105a702",
    "metadata": {},
    "source": [
     "# Global poster viz: Pools"
@@ -2764,7 +2783,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3e14e6eb",
+   "id": "e38ac061",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2778,7 +2797,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "00c5919b",
+   "id": "a64b55f2",
    "metadata": {},
    "outputs": [
     {
@@ -2888,7 +2907,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "932d8135",
+   "id": "34a99bc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2915,7 +2934,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "6343fd34",
+   "id": "526bebba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2925,7 +2944,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "74e1b27d",
+   "id": "fea07cb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2934,7 +2953,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22166d5c",
+   "id": "d8ffe9a3",
    "metadata": {},
    "source": [
     "# Global poster viz: Continuous variables (unscaled, with the ceiling of 3*IQR)"
@@ -2942,7 +2961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09fdf3bb",
+   "id": "f082c88d",
    "metadata": {},
    "source": [
     "This one requires scaling the outliers down to the $\\text{median} + \\left( 3 \\times \\text{IQR} \\right)$ so that the color scaling is reasonable. So I have to play around with `water_df` a little bit. This is from Alaina's code."
@@ -2951,7 +2970,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "44e11dab",
+   "id": "3f734981",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2963,7 +2982,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "c0983240",
+   "id": "0b2dffbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2998,7 +3017,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "c815ebbe",
+   "id": "a201e626",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3008,7 +3027,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "cd7d1cdf",
+   "id": "982a9bdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3017,7 +3036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "347ee958",
+   "id": "5d0d609e",
    "metadata": {},
    "source": [
     "# Global poster viz: States"
@@ -3073,7 +3092,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecbede86",
+   "id": "6985a9ae",
    "metadata": {},
    "source": [
     "# Pool 4 Specific Visualizations"
@@ -3081,8 +3100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "22ac572d",
+   "execution_count": 186,
+   "id": "f6414e61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3095,8 +3114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "481ada58",
+   "execution_count": 190,
+   "id": "264b3beb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3109,13 +3128,14 @@
     "                                    \"TP_color\": \"TP_COLOR\", \n",
     "                                    \"TN_color\": \"TN_COLOR\", \n",
     "                                    \"SS_color\": \"SS_COLOR\", \n",
-    "                                    \"CHLcal_color\": \"CHLcal_COLOR\"})"
+    "                                    \"CHLcal_color\": \"CHLcal_COLOR\", \n",
+    "                                    \"LATTITUDE\": \"LATITUDE\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "6fa1b610",
+   "execution_count": 191,
+   "id": "f182b75a",
    "metadata": {},
    "outputs": [
     {
@@ -3313,7 +3333,7 @@
        "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3324,8 +3344,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "a0665281",
+   "execution_count": 192,
+   "id": "47b8666a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['WDP', 'SECCHI', 'TEMP', 'DO', 'TURB', 'VEL', 'TP', 'TN', 'SS',\n",
+       "       'CHLcal', 'SHEETBAR', 'DATE', 'LATITUDE', 'LONGITUDE', 'FLDNUM',\n",
+       "       'STRATUM', 'LOCATCD', 'YEAR', 'SEASON', '1993-2000', '1898-2004',\n",
+       "       '2001-2013', '2010-2016', '2014-2020',\n",
+       "       'Backwater area contiguous to the main channel', 'Impounded',\n",
+       "       'Isolated', 'Lake Pepin or Swan Lake', 'Main channel',\n",
+       "       'Side channel', 'Unexploded Ordinance Area - Pool 13', 'UPPER',\n",
+       "       'LOWER', 'WDP_COLOR', 'SECCHI_COLOR', 'TEMP_COLOR', 'DO_COLOR',\n",
+       "       'TURB_COLOR', 'VEL_COLOR', 'TP_COLOR', 'TN_COLOR', 'SS_COLOR',\n",
+       "       'CHLcal_COLOR', 'State 1', 'State 2', 'STATE'], dtype=object)"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pool4_df.columns.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "ada7e208",
    "metadata": {},
    "outputs": [
     {
@@ -3334,7 +3384,7 @@
        "dict_keys(['nodes', 'links', 'simplices', 'meta_data', 'meta_nodes', 'density', 'graph', 'maxima', 'states'])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3345,7 +3395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "748c52bb",
+   "id": "f4d8488d",
    "metadata": {},
    "source": [
     "## Pool 4 viz: Continuous variables"
@@ -3354,7 +3404,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "3eb8d925",
+   "id": "e00b23d8",
    "metadata": {},
    "outputs": [
     {
@@ -3383,18 +3433,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1bf61967",
+   "execution_count": 127,
+   "id": "81b8cb1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cont_palettes = []"
+    "continuous_variables = [\"WDP\", \"SECCHI\", \"TEMP\", \"DO\", \"TURB\", \"VEL\", \"TP\", \"TN\", \"SS\", \"CHLcal\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b08e584d",
+   "id": "55c0960d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3414,7 +3464,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "244b5960",
+   "id": "c29f101a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3423,7 +3473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "637627d8",
+   "id": "b44edfc8",
    "metadata": {},
    "source": [
     "### Pool 4 Initialize layout"
@@ -3432,7 +3482,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "4e54d9b0",
+   "id": "31bdfdb4",
    "metadata": {},
    "outputs": [
     {
@@ -4473,7 +4523,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "dbe8a2a9",
+   "id": "890d03f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4482,7 +4532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28b25ae1",
+   "id": "5b82498c",
    "metadata": {},
    "source": [
     "## Pool 4 viz: States\n",
@@ -4493,7 +4543,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "acdd2d79",
+   "id": "da8e877c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4521,7 +4571,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "b6de81eb",
+   "id": "2b8befb9",
    "metadata": {},
    "outputs": [
     {
@@ -4539,7 +4589,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "2a95722e",
+   "id": "db96b6cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4548,7 +4598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f238221f",
+   "id": "ee950966",
    "metadata": {},
    "source": [
     "## Pool 4 viz: Upper vs. lower (later)"
@@ -4556,11 +4606,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4f56d5ed",
+   "execution_count": 170,
+   "id": "37afe0c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9810, 48)"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pool4_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "fa812cb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['WDP', 'SECCHI', 'TEMP', 'DO', 'TURB', 'VEL', 'TP', 'TN', 'SS', 'CHLcal']"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "continuous_variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "id": "5da326dd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pool4_df['wrong_long'] = pool4_df['LONGITUDE']\n",
+    "pool4_df['LONGITUDE'] = pool4_df['LATITUDE']\n",
+    "pool4_df['LATITUDE'] = pool4_df['wrong_long'] # code error with lat / long"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "75631567",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pool4_df[\"UPPER\"] = np.where((pool4_df['LATITUDE'] <= -92.4) & \n",
+    "                             (pool4_df['FLDNUM'] != 'Lake Pepin or Swan Lake'), \n",
+    "                             1, 0)\n",
+    "pool4_df[\"LOWER\"] = np.where((pool4_df['LATITUDE'] >= -92.2) & \n",
+    "                             (pool4_df['FLDNUM'] != 'Lake Pepin or Swan Lake'),\n",
+    "                             1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "162e5c2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean\n"
+     ]
+    }
+   ],
+   "source": [
+    "region_km, region_summary, region_colors = get_mapper_by_var(pool4_scomplex, pool4_df, ['LOWER', 'UPPER'], \n",
+    "                                                             False, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "172f94b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "region_plotly = save_plotly(region_km, region_summary, region_colors, pool_palettes, \n",
+    "                            ['LOWER', 'UPPER'], layt)"
+   ]
   }
  ],
  "metadata": {
